--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,16 @@
-fastapi[all]
-uvicorn[standard]
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
 pydantic-settings
 python-dotenv
-google-generativeai
+google-generativeai==0.8.3
 psycopg2-binary
 pypdf
 sentence-transformers
 
-# The core, compatible stack that fixes the error
-supabase>=2.0.0
+# The Fix: Force latest Supabase to handle modern httpx
+supabase>=2.9.0
+httpx>=0.27.0
+
+# LangChain Stack
 langchain-community
 langchain-huggingface
