--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,5 +12,5 @@ supabase>=2.9.0
 httpx>=0.27.0
 
 # LangChain Stack
-langchain-community
-langchain-huggingface
+langchain-google-genai
+huggingface_hub
